# Resume_Analyzer

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  build_files.sh  index.py  kill_qcluster.bat  manage.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup_stripe.py  supervisord.conf  test_password_reset.py  update_changes.ps1  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
analyzer/: admin.py  ats_knowledge.py  diff_engine.py  fields.py  models.py  prompt_builder.py  signals.py  tasks.py  urls.py  utils.py  views.py
analyzer/migrations/: 0001_initial.py  0002_resumeanalysis_upskill_paths.py  0003_resumeanalysis_ats_format_issues.py  0004_resumeanalysis_impact_critiques.py  0005_resumeanalysis_cover_letter_and_more.py  0006_alter_resumeanalysis_cover_letter_and_more.py  0007_resumeanalysis_status.py  0008_resumeanalysis_interview_questions.py  0009_userprofile.py  0010_userprofile_current_period_end_and_more.py  0011_rename_stripe_customer_id_userprofile_razorpay_customer_id_and_more.py  0012_resumeanalysis_searchability_checks.py  0013_resumeanalysis_completion_tokens_and_more.py  0014_coupon.py  0015_userprofile_has_used_free_trial.py  0016_resumeanalysis_slug.py  0017_resumeanalysis_category.py  0018_userprofile_phone_number.py  0019_userprofile_email_verified_and_more.py  0020_resumeanalysis_structured_resume_interviewsession_and_more.py  0021_localizedresume.py  0022_prewrittenbullet.py  0023_resumeanalysis_fraud_audit.py  0024_blogpost.py  0025_populate_blog_posts.py  0026_add_more_blog_posts.py  0027_lengthen_blog_posts.py  0028_secondaryemail.py  0029_add_blog_images.py
analyzer/services/: analysis_service.py
extension/: manifest.json  popup.html  popup.js
resume_analyzer/: settings.py  urls.py  wsgi.py
templates/: robots.txt  sitemap.xml
templates/account/: password_change.html
templates/analyzer/: authenticity_audit.html  auto_vet.html  base.html  blog_detail.html  blog_index.html  builder_wizard.html  chrome_extension.html  compare.html  contact.html  history.html  index.html  insights.html  landing.html  payment_failed.html  (+13 more)
tests/: generate_fixtures.py  test_ats_hostile.py  test_builder_wizard.py  test_new_features.py  test_searchability.py  test_utils.py  test_views.py
(+17 files in other folders)
