[project]
name = "resume-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2,<5.2",
    "pdfplumber>=0.9",
    "python-docx>=0.8",
    "groq>=0.9.0",
    "python-decouple>=3.8",
    "django-ratelimit>=4.0",
    "gunicorn>=21.0",
    "dj-database-url>=2.1.0",
    "whitenoise>=6.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "reportlab>=4.0.0",
    "PyMuPDF",
    "django-q2",
    "cryptography",
    "psycopg2-binary",
    "supervisor",
    "stripe>=7.0.0",
    "django-allauth[socialaccount]>=0.60.0",
    "tenacity==9.1.4",
    "django-environ==0.13.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "resume_analyzer.settings"
python_files = ["test_*.py", "*_tests.py"]
addopts = "--cov=analyzer --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
